Fixing rain readings and adding GPS sleep and wakeup mode (frontend)

--- a/weewx.conf
+++ b/weewx.conf
@@ -26,7 +26,7 @@ version = 3.6.2
 [Station]
     
     # Description of the station location
-    location = "Penthouse Weather Station"
+    location = replace_me
     
     # Latitude and longitude in decimal degrees
     latitude = replace_me
@@ -243,6 +243,7 @@ version = 3.6.2
         # It should be in the units defined in the StdConvert section.
         # Example:
         # foo = foo + 0.2
+	# windDir = (windDir + 45 if windDir < 315 else windDir - 315) if windDir is not None else None
 	windDir = (windDir + 45 if windDir < 135 else windDir - 135) if windDir is not None else None
 
 ##############################################################################
@@ -281,7 +282,7 @@ version = 3.6.2
         heatindex = prefer_hardware
         dewpoint = prefer_hardware
         inDewpoint = prefer_hardware
-        rainRate = prefer_hardware
+        rainHour = prefer_hardware
 
 ##############################################################################
 
