--- a/ArduinoPWS/skin.conf
+++ b/ArduinoPWS/skin.conf
@@ -26,7 +26,6 @@
     # Astronomy info in Almanac
     astro_panel = 1
 
-
     # Copyright - shows up in footer
     copyright = "<a href="mailto:rkaczorek@gmail.com">Radek Kaczorek</a>"
     
@@ -91,7 +90,7 @@
         percent            = %.0f
         second             = %.0f
         uv_index           = %.0f
-        volt               = %.1f
+        volt               = %.2f
         watt_per_meter_squared = %.2f
         NONE               = "   N/A"
 
@@ -181,8 +180,8 @@
         outHumidity    = Humidity
         outTemp        = Temperature
         radiation      = Radiation
-        rain           = Rain
-        rainRate       = Rain Rate
+        rainDay        = Rain
+        rainHour       = Rain Rate
         rxCheckPercent = ISS Signal Quality
         UV             = UV Index
         windDir        = Wind Direction
@@ -192,6 +191,7 @@
         windchill      = Wind Chill
         windgustvec    = Gust Vector
         windvec        = Wind Vector
+        supplyVoltage  = Battery Level
     
         # This one is probably specific to my station!
         extraTemp1     = Pond Temperature
@@ -304,12 +304,12 @@
     # individual lines using option 'color'
     chart_line_colors = 0xb48242, 0x4242b4, 0x42b442
     
-	# Type of line. Only 'solid' or 'none' is offered now    
+    # Type of line. Only 'solid' or 'none' is offered now    
     line_type = 'solid'
 
     # Size of marker in pixels
     marker_size = 8
-	# Type of marker. Pick one of 'cross', 'x', 'circle', 'box', or 'none'
+    # Type of marker. Pick one of 'cross', 'x', 'circle', 'box', or 'none'
     marker_type = 'none'
     
     # Default fill colors for bar charts. These can be overridden for
@@ -388,7 +388,7 @@
             # Make sure the y-axis increment is at least 0.02 for the rain plot
             yscale = None, None, 0.02
             plot_type = bar
-            [[[[rain]]]]
+            [[[[rainHour]]]]
                 aggregate_type = sum
                 aggregate_interval = 3600
                 label = Rain (hourly total)
@@ -422,6 +422,9 @@
         [[[dayuv]]]
             yscale = 0, 16, 1
             [[[[UV]]]]
+
+        [[[daybattery]]]
+            [[[[supplyVoltage]]]]
             
     [[week_images]]
         x_label_format = %d
@@ -444,7 +447,7 @@
         [[[weekrain]]]
             yscale = None, None, 0.02
             plot_type = bar
-            [[[[rain]]]]
+            [[[[rainDay]]]]
                 aggregate_type = sum
                 aggregate_interval = 86400
                 label = Rain (daily total)
@@ -479,6 +482,9 @@
             yscale = 0, 16, 1
             [[[[UV]]]]
 
+        [[[weekbattery]]]
+            [[[[supplyVoltage]]]]
+
     [[month_images]]
         x_label_format = %d
         bottom_label_format = %x %X
@@ -501,7 +507,7 @@
         [[[monthrain]]]
             yscale = None, None, 0.02
             plot_type = bar
-            [[[[rain]]]]
+            [[[[rainDay]]]]
                 aggregate_type = sum
                 aggregate_interval = 86400
                 label = Rain (daily total)
@@ -535,6 +541,9 @@
         [[[monthuv]]]
             yscale = 0, 16, 1
             [[[[UV]]]]
+
+        [[[monthbattery]]]
+            [[[[supplyVoltage]]]]
 
     [[year_images]]
         x_label_format = %m/%d
@@ -574,7 +583,7 @@
         [[[yearrain]]]
             yscale = None, None, 0.02
             plot_type = bar
-            [[[[rain]]]]
+            [[[[rainDay]]]]
                 aggregate_type = sum
                 # aggregate_interval = 2629800 # Magic number: the length of a nominal month
                 aggregate_interval = 604800    # == 1 week
@@ -604,6 +613,9 @@
         [[[yearuv]]]
             yscale = 0, 16, 1
             [[[[UV]]]]
+
+        [[[yearbattery]]]
+            [[[[supplyVoltage]]]]
 
 ###############################################################################
 
