Fixing skin for favicon

--- a/ArduinoPWS/skin.conf
+++ b/ArduinoPWS/skin.conf
@@ -246,7 +246,7 @@
     # This section is used by the generator CopyGenerator
 
     # List of files to be copied only the first time the generator runs
-    copy_once = css/main.css, js/*, .htaccess, 404.html, robots.txt, touch-icon.png, reticle.png, polaris.png
+    copy_once = css/main.css, js/*, .htaccess, 404.html, robots.txt, favicon.ico, touch-icon.png, reticle.png, polaris.png
 
 ###############################################################################
 
