Calibration of light sensor

--- a/weewx.conf
+++ b/weewx.conf
@@ -243,8 +243,8 @@ version = 3.6.2
         # It should be in the units defined in the StdConvert section.
         # Example:
         # foo = foo + 0.2
-	# windDir = (windDir + 45 if windDir < 315 else windDir - 315) if windDir is not None else None
 	windDir = (windDir + 45 if windDir < 135 else windDir - 135) if windDir is not None else None
+	radiation = 0.0079 * 10000 * radiation / 3.3
 
 ##############################################################################
 
