Changing units from US to METRICWX, tuning skin, adding Moon phase, fixing driver

--- a/ArduinoPWS/skin.conf
+++ b/ArduinoPWS/skin.conf
@@ -11,16 +11,16 @@
     # Current radar image
     radar_img = http://api.sat24.com/mostrecent/PL/infraPolair
     # Current radar animation (starts on radar_img hover)
-    radar_gif = http://api.sat24.com/animated/PL/infraPolair/2/Central%20European%20Standard%20Time/7932783
+    radar_gif = http://api.sat24.com/animated/PL/infraPolair/2/
     # Hyperlink for radar
-    radar_url = http://sat24.com
+    radar_url = http://pl.sat24.com/pl/eu/infraPolair
 
     # Radar2 map and hyperlink
     radar2_map = http://www.meteo.pl/um/metco/mgram_pict.php?ntype=0u&row=406&col=250&lang=en
     radar2_url = http://m.meteo.pl/
 
     # URL for another radar (for example full Europe, Frankfurt center)
-    radar_url_alt = http://api.sat24.com/animated/EU/rainTMC/2/Central%20European%20Standard%20Time/3296060
+    radar_url_alt = http://api.sat24.com/animated/EU/rainTMC/2/
     radar_url_alt_text = "Rain Map"
 
     # Astronomy info in Almanac
@@ -246,7 +246,7 @@
     # This section is used by the generator CopyGenerator
 
     # List of files to be copied only the first time the generator runs
-    copy_once = css/main.css, js/*, .htaccess, 404.html, robots.txt, favicon.ico, touch-icon.png, reticle.png, polaris.png
+    copy_once = css/main.css, js/*, .htaccess, 404.html, robots.txt, favicon.ico, touch-icon.png, reticle.png, polaris.png, moon.png
 
 ###############################################################################
 
@@ -373,9 +373,6 @@
         bottom_label_format = %x %X
         time_length = 97200    # == 27 hours
         
-        [[[daybarometer]]]
-            [[[[barometer]]]]
-        
         [[[daytempdew]]]
             [[[[outTemp]]]]
             [[[[dewpoint]]]]
@@ -384,28 +381,24 @@
             [[[[windchill]]]]
             [[[[heatindex]]]]
         
+        [[[dayhumidity]]]
+            [[[[outHumidity]]]]
+
         [[[dayrain]]]
             # Make sure the y-axis increment is at least 0.02 for the rain plot
             yscale = None, None, 0.02
             plot_type = bar
             [[[[rainHour]]]]
-                aggregate_type = sum
+                aggregate_type = max
                 aggregate_interval = 3600
                 label = Rain (hourly total)
                 
-        [[[dayrx]]]
-            [[[[rxCheckPercent]]]]
-        
-        [[[daypond]]]
-            yscale = None, None, 0.5
-            [[[[extraTemp1]]]]
-        
+        [[[daybarometer]]]
+            [[[[barometer]]]]
+
         [[[daywind]]]
             [[[[windSpeed]]]]
             [[[[windGust]]]]
-        
-        [[[dayinside]]]
-            [[[[inTemp]]]]
         
         [[[daywinddir]]]
             # Hardwire in the y-axis scale for wind direction
@@ -419,10 +412,6 @@
         [[[dayradiation]]]
             [[[[radiation]]]]
 
-        [[[dayuv]]]
-            yscale = 0, 16, 1
-            [[[[UV]]]]
-
         [[[daybattery]]]
             [[[[supplyVoltage]]]]
             
@@ -433,9 +422,6 @@
         aggregate_type = avg
         aggregate_interval = 3600
         
-        [[[weekbarometer]]]
-            [[[[barometer]]]]
-        
         [[[weektempdew]]]
             [[[[outTemp]]]]
             [[[[dewpoint]]]]
@@ -444,28 +430,24 @@
             [[[[windchill]]]]
             [[[[heatindex]]]]
         
+        [[[weekhumidity]]]
+            [[[[outHumidity]]]]
+
         [[[weekrain]]]
             yscale = None, None, 0.02
             plot_type = bar
             [[[[rainDay]]]]
-                aggregate_type = sum
+                aggregate_type = none
                 aggregate_interval = 86400
                 label = Rain (daily total)
         
-        [[[weekpond]]]
-            yscale = None, None, 0.5
-            [[[[extraTemp1]]]]
-        
-        [[[weekrx]]]
-            [[[[rxCheckPercent]]]]
-        
+        [[[weekbarometer]]]
+            [[[[barometer]]]]
+
         [[[weekwind]]]
             [[[[windSpeed]]]]
             [[[[windGust]]]]
                 aggregate_type = max
-        
-        [[[weekinside]]]
-            [[[[inTemp]]]]
         
         [[[weekwinddir]]]
             yscale = 0.0, 360.0, 45.0
@@ -478,10 +460,6 @@
         [[[weekradiation]]]
             [[[[radiation]]]]
 
-        [[[weekuv]]]
-            yscale = 0, 16, 1
-            [[[[UV]]]]
-
         [[[weekbattery]]]
             [[[[supplyVoltage]]]]
 
@@ -493,9 +471,6 @@
         aggregate_interval = 10800    # == 3 hours
         show_daynight = false
         
-        [[[monthbarometer]]]
-            [[[[barometer]]]]
-        
         [[[monthtempdew]]]
             [[[[outTemp]]]]
             [[[[dewpoint]]]]
@@ -504,28 +479,24 @@
             [[[[windchill]]]]
             [[[[heatindex]]]]
         
+        [[[monthhumidity]]]
+            [[[[outHumidity]]]]
+
         [[[monthrain]]]
             yscale = None, None, 0.02
             plot_type = bar
             [[[[rainDay]]]]
-                aggregate_type = sum
+                aggregate_type = none
                 aggregate_interval = 86400
                 label = Rain (daily total)
-        
-        [[[monthpond]]]
-            yscale = None, None, 0.5
-            [[[[extraTemp1]]]]
-        
-        [[[monthrx]]]
-            [[[[rxCheckPercent]]]]
+
+        [[[monthbarometer]]]
+            [[[[barometer]]]]
         
         [[[monthwind]]]
             [[[[windSpeed]]]]
             [[[[windGust]]]]
                 aggregate_type = max
-        
-        [[[monthinside]]]
-            [[[[inTemp]]]]
         
         [[[monthwinddir]]]
             yscale = 0.0, 360.0, 45.0
@@ -538,10 +509,6 @@
         [[[monthradiation]]]
             [[[[radiation]]]]
             
-        [[[monthuv]]]
-            yscale = 0, 16, 1
-            [[[[UV]]]]
-
         [[[monthbattery]]]
             [[[[supplyVoltage]]]]
 
@@ -552,9 +519,6 @@
         aggregate_type = avg
         aggregate_interval = 86400
         show_daynight = false
-        
-        [[[yearbarometer]]]
-            [[[[barometer]]]]
         
         [[[yeartempdew]]]
             [[[[outTemp]]]]
@@ -571,6 +535,9 @@
                 aggregate_type = min
                 label = Low Temperature
                 
+        [[[yearbarometer]]]
+            [[[[barometer]]]]
+
         [[[yearwind]]]
             [[[[windSpeed]]]]
             [[[[windGust]]]]
@@ -580,24 +547,17 @@
             [[[[windchill]]]]
             [[[[heatindex]]]]
         
+        [[[yearhumidity]]]
+            [[[[outHumidity]]]]
+
         [[[yearrain]]]
             yscale = None, None, 0.02
             plot_type = bar
             [[[[rainDay]]]]
-                aggregate_type = sum
+                aggregate_type = none
                 # aggregate_interval = 2629800 # Magic number: the length of a nominal month
                 aggregate_interval = 604800    # == 1 week
                 label = Rain (weekly total)
-        
-        [[[yearpond]]]
-            yscale = None, None, 0.5
-            [[[[extraTemp1]]]]
-        
-        [[[yearrx]]]
-            [[[[rxCheckPercent]]]]
-        
-        [[[yearinside]]]
-            [[[[inTemp]]]]
         
         [[[yearwinddir]]]
             yscale = 0.0, 360.0, 45.0
@@ -610,10 +570,6 @@
         [[[yearradiation]]]
             [[[[radiation]]]]
             
-        [[[yearuv]]]
-            yscale = 0, 16, 1
-            [[[[UV]]]]
-
         [[[yearbattery]]]
             [[[[supplyVoltage]]]]
 
