--- a/weewx.conf
+++ b/weewx.conf
@@ -56,7 +56,7 @@ version = 3.6.2
     # This section is for the weewx weather station simulator
 
     # The time (in seconds) between LOOP packets.
-    loop_interval = 2.5
+    loop_interval = 10
 
     # Serial port such as /dev/rfcomm0 (default) or /dev/ttyUSB0
     port = /dev/rfcomm0
@@ -118,7 +118,7 @@ version = 3.6.2
         
         # If you wish to do this, set the option 'enable' to true,
         # and specify a station (e.g., 'KORHOODR3') and password.
-        enable = true
+        enable = false
         station = replace_me
         password = replace_me
         
@@ -230,7 +230,7 @@ version = 3.6.2
     # should use US since that is what the wview database contains.
     
     # DO NOT MODIFY THIS VALUE UNLESS YOU KNOW WHAT YOU ARE DOING!
-    target_unit = US    # Options are 'US', 'METRICWX', or 'METRIC'
+    target_unit = METRICWX    # Options are 'US', 'METRICWX', or 'METRIC'
 
 ##############################################################################
 
@@ -243,7 +243,7 @@ version = 3.6.2
         # It should be in the units defined in the StdConvert section.
         # Example:
         # foo = foo + 0.2
-	windDir = (windDir + 45 if windDir < 135 else windDir - 135) if windDir is not None else None
+        windDir = (windDir + 45 if windDir < 315 else windDir + 45 - 315) if windDir is not None else None
 	radiation = 0.0079 * 10000 * radiation / 3.3
 
 ##############################################################################
@@ -255,12 +255,9 @@ version = 3.6.2
     
     [[MinMax]]
         barometer = 26, 32.5, inHg
-        outTemp = -40, 120, degree_F
-        inTemp = 10, 120, degree_F
+        outTemp = -40, 140, degree_F
         outHumidity = 0, 100
-        inHumidity = 0, 100
         windSpeed = 0, 120, mile_per_hour
-        pressure = 24, 34.5, inHg
 
 ##############################################################################
 
@@ -275,13 +272,8 @@ version = 3.6.2
         #  prefer_hardware - use value provide by hardware if available,
         #                      otherwise use value calculated by weewx
         
-        pressure = prefer_hardware
         barometer = prefer_hardware
-        altimeter = prefer_hardware
-        windchill = prefer_hardware
-        heatindex = prefer_hardware
         dewpoint = prefer_hardware
-        inDewpoint = prefer_hardware
         rainHour = prefer_hardware
 
 ##############################################################################
