Fixes to rain gauge and various tweaks

--- a/ArduinoPWS/skin.conf
+++ b/ArduinoPWS/skin.conf
@@ -175,15 +175,11 @@
         barometer      = Barometer
         dewpoint       = Dew Point
         heatindex      = Heat Index
-        inHumidity     = Inside Humidity
-        inTemp         = Inside Temperature
         outHumidity    = Humidity
         outTemp        = Temperature
         radiation      = Radiation
-        rainDay        = Rain
-        rainHour       = Rain Rate
-        rxCheckPercent = ISS Signal Quality
-        UV             = UV Index
+        rain           = Rain
+        rainRate       = Rain Rate
         windDir        = Wind Direction
         windGust       = Gust Speed
         windGustDir    = Gust Direction
@@ -193,9 +189,6 @@
         windvec        = Wind Vector
         supplyVoltage  = Battery Level
     
-        # This one is probably specific to my station!
-        extraTemp1     = Pond Temperature
-
 ###############################################################################
 
 [Almanac]
@@ -388,8 +381,8 @@
             # Make sure the y-axis increment is at least 0.02 for the rain plot
             yscale = None, None, 0.02
             plot_type = bar
-            [[[[rainHour]]]]
-                aggregate_type = max
+            [[[[rain]]]]
+                aggregate_type = sum
                 aggregate_interval = 3600
                 label = Rain (hourly total)
                 
@@ -436,8 +429,8 @@
         [[[weekrain]]]
             yscale = None, None, 0.02
             plot_type = bar
-            [[[[rainDay]]]]
-                aggregate_type = none
+            [[[[rain]]]]
+                aggregate_type = sum
                 aggregate_interval = 86400
                 label = Rain (daily total)
         
@@ -485,8 +478,8 @@
         [[[monthrain]]]
             yscale = None, None, 0.02
             plot_type = bar
-            [[[[rainDay]]]]
-                aggregate_type = none
+            [[[[rain]]]]
+                aggregate_type = sum
                 aggregate_interval = 86400
                 label = Rain (daily total)
 
@@ -553,8 +546,8 @@
         [[[yearrain]]]
             yscale = None, None, 0.02
             plot_type = bar
-            [[[[rainDay]]]]
-                aggregate_type = none
+            [[[[rain]]]]
+                aggregate_type = sum
                 # aggregate_interval = 2629800 # Magic number: the length of a nominal month
                 aggregate_interval = 604800    # == 1 week
                 label = Rain (weekly total)
