--- a/weewx.conf
+++ b/weewx.conf
@@ -256,7 +256,7 @@ version = 3.6.2
     [[MinMax]]
         barometer = 26, 32.5, inHg
         outTemp = -40, 140, degree_F
-        outHumidity = 0, 100
+        outHumidity = 0, 110
         windSpeed = 0, 120, mile_per_hour
 
 ##############################################################################
@@ -272,9 +272,9 @@ version = 3.6.2
         #  prefer_hardware - use value provide by hardware if available,
         #                      otherwise use value calculated by weewx
         
-        barometer = prefer_hardware
-        dewpoint = prefer_hardware
-        rainHour = prefer_hardware
+        barometer = hardware
+        dewpoint = hardware
+        rain = hardware
 
 ##############################################################################
 
@@ -328,7 +328,7 @@ version = 3.6.2
         # The schema defines the structure of the database.
         # It is *only* used when the database is created.
         # schema = schemas.wview.schema
-        schema = schemas.wview_with_gps.schema
+        schema = schemas.wview_arduinopws.schema
 
 
 ##############################################################################
