Reset prefer_hardware

--- a/weewx.conf
+++ b/weewx.conf
@@ -272,9 +272,9 @@ version = 3.6.2
         #  prefer_hardware - use value provide by hardware if available,
         #                      otherwise use value calculated by weewx
         
-        barometer = hardware
-        dewpoint = hardware
-        rain = hardware
+        barometer = prefer_hardware
+        dewpoint = prefer_hardware
+        rain = prefer_hardware
 
 ##############################################################################
 
